# spambotsen

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  forsen_lines.csv  module.nix
src/: commands.rs  common.rs  config.rs  db.rs  forsen_lines.rs  hebi.rs  lib.rs  main.rs
src/commands/: channel_id.rs  clear_commands.rs  forsen_status.rs  mod.rs
src/platform/: discord.rs  mod.rs  twitch.rs
