[package]
name = "spambotsen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

anyhow = "1.0.70"
poise = "0.5.5"
csv = "1.1.6"
rand = "0.8.5"
serde = "1.0.152"

shuttle-poise = "0.17.0"
shuttle-runtime = "0.17.0"
shuttle-secrets = "0.17.0"
shuttle-static-folder = "0.17.0"

tokio = "1.27.0"
tracing = "0.1.37"
toml = "0.7.3"
hebi = "0.4.0"
regex-syntax = "0.7.3"
