[package]
name = "spambotsen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

poise = "0.5.5"
csv = "1.1.6"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }

# shuttle-poise = "0.17.0"
# shuttle-runtime = "0.17.0"
# shuttle-secrets = "0.17.0"
# shuttle-static-folder = "0.17.0"
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
toml = "0.7.3"
hebi = "0.4.0"
regex-syntax = "0.7.3"
eyre = "0.6.12"
