[package]
name = "spambotsen"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
poise = "0.5.5"
csv = "1.1.6"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tracing = "0.1.37"
toml = "0.7.3"
regex-syntax = "0.7.3"
eyre = "0.6.12"
tmi = "0.7.1"
async-channel = "2.3.1"

roll-dice = { git = "https://github.com/jprochazk/roll-dice", branch = "master", version = "0.2.2" }
